# bagent

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md
apps/macos/: Info.plist  Makefile  Package.resolved  Package.swift
apps/macos/.build/: build.db  plugin-tools.yaml  release.yaml
apps/macos/.build/arm64-apple-macosx/debug/: bagent  plugin-tools-description.json
apps/macos/.build/arm64-apple-macosx/debug/ModuleCache/: _WebKit_SwiftUI-3G1VDGPBD39FK.swiftmodule
apps/macos/.build/arm64-apple-macosx/debug/ModuleCache/2WHMFUF0JAC9S/: Accessibility-RCJSN2GG3RAR.pcm  ApplicationServices-3NXEUUZF9JJBD.pcm  CFNetwork-1PNPO1ORVQZLS.pcm  CUPS-1HLHMKUB322XA.pcm  Carbon-3FMY3B0T5SZYU.pcm  ColorSync-3EIM4S8RXNRVI.pcm  CoreData-1KHK1L2CYC2N6.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  CoreGraphics-1PSDCAYCIV3T9.pcm  CoreImage-39ZO87840M5PP.pcm  CoreText-3FAL1B4J38DIR.pcm  CoreTransferable-27T896KGHFB3R.pcm  CoreVideo-DBBGB2LXU3HG.pcm  DataDetection-R5W4QHNMPWVH.pcm  DeveloperToolsSupport-3SUCMSK9ZS2JA.pcm  DiskArbitration-3LBJF5I58QD8.pcm  Dispatch-R76HXUP80TVL.pcm  IOSurface-26455DPS9NDS0.pcm  ImageIO-2ZSF831VT29UB.pcm  JavaScriptCore-179YF19M15PYU.pcm  MachO-20RPYVQSX341K.pcm  Metal-1GCZV9N85NJOH.pcm  Network-25YL5WDWFD9R4.pcm  OSLog-218FBXNFJGY61.pcm  ObjectiveC-1G8H182PQX3QE.pcm  (+37 more)
apps/macos/.build/arm64-apple-macosx/debug/Modules/: bagent.swiftdoc  bagent.swiftmodule  bagent.swiftsourceinfo
apps/macos/.build/arm64-apple-macosx/debug/bagent.build/: AppDelegate.d  AppDelegate.swiftdeps  ChatView.d  ChatView.swiftdeps  ChatViewModel.d  ChatViewModel.swiftdeps  DaemonClient.d  DaemonClient.swiftdeps  DaemonLauncher.d  DaemonLauncher.swiftdeps  GlobalHotkey.d  GlobalHotkey.swiftdeps  MessageContentView.d  MessageContentView.swiftdeps  NotchWindowController.d  NotchWindowController.swiftdeps  NotchWrapShape.d  NotchWrapShape.swiftdeps  PermissionsManager.d  PermissionsManager.swiftdeps  SettingsView.d  SettingsView.swiftdeps  StatusBarController.d  StatusBarController.swiftdeps  bagent.emit-module.d  main.d  main.swiftdeps  output-file-map.json  primary.priors
apps/macos/.build/arm64-apple-macosx/debug/bagent.product/: Objects.LinkFileList
apps/macos/.build/arm64-apple-macosx/release/: bagent  plugin-tools-description.json
apps/macos/.build/arm64-apple-macosx/release/Modules/: bagent.swiftdoc  bagent.swiftmodule  bagent.swiftsourceinfo
apps/macos/.build/arm64-apple-macosx/release/bagent.build/: bagent.d  output-file-map.json  sources
apps/macos/.build/arm64-apple-macosx/release/bagent.product/: Objects.LinkFileList
apps/macos/.build/index-build/: build.db  plugin-tools.yaml
apps/macos/.build/index-build/arm64-apple-macosx/debug/: plugin-tools-description.json
apps/macos/Sources/bagent/: AppDelegate.swift  ChatView.swift  ChatViewModel.swift  DaemonClient.swift  DaemonLauncher.swift  GlobalHotkey.swift  KeychainStore.swift  MemoryPanelView.swift  MessageContentView.swift  NotchWindowController.swift  NotchWrapShape.swift  PermissionsManager.swift  QRImage.swift  ScreenContextProvider.swift  SettingsView.swift  SiriWaveView.swift  SkillsPanelView.swift  SpectrumAnalyzer.swift  SpeechController.swift  StatusBarController.swift  VoiceNotchContent.swift  VoiceOverlayView.swift  WaveBackgroundView.swift  main.swift
apps/macos/bagent.app/Contents/: Info.plist
apps/macos/bagent.app/Contents/MacOS/: bagent
crates/agent/: Cargo.toml
crates/agent/src/: context_planner.rs  feedback.rs  file_intent.rs  lib.rs  mail_intent.rs  memory_extractor.rs  odoo_intent.rs  prompt.rs  reference_resolver.rs  screen_intent.rs  task_rater.rs  whatsapp_intent.rs  window_intent.rs
crates/attachments/: Cargo.toml
crates/attachments/src/: lib.rs
crates/connectors/apple_mail/: Cargo.toml
crates/connectors/apple_mail/src/: lib.rs
crates/connectors/apple_notes/: Cargo.toml
crates/connectors/apple_notes/src/: lib.rs
crates/connectors/codex/: Cargo.toml
crates/connectors/codex/src/: exec.rs  lib.rs  types.rs
crates/connectors/filesystem/: Cargo.toml
crates/connectors/filesystem/src/: lib.rs  open.rs  path_policy.rs  search.rs  types.rs
crates/connectors/odoo/: Cargo.toml
crates/connectors/odoo/src/: json_rpc.rs  lib.rs  mcp.rs  types.rs
crates/connectors/ollama/: Cargo.toml
crates/connectors/ollama/src/: lib.rs
crates/connectors/ollama/tests/: diacritics.rs
crates/connectors/whatsapp/: Cargo.toml
crates/connectors/whatsapp/bridge/: index.js  package-lock.json  package.json  test.js
crates/connectors/whatsapp/src/: bridge_client.rs  lib.rs  process.rs  types.rs
crates/daemon/: Cargo.toml
crates/daemon/migrations/: V10__chat_turns_fts_embeddings.sql  V11__memory_ledger_skills.sql  V12__whatsapp.sql  V1__initial.sql  V2__full_schema.sql  V3__mail_cache.sql  V4__sessions_messages_memory.sql  V5__embeddings.sql  V6__sessions_schema_fix.sql  V7__pending_approvals.sql  V8__attachments.sql  V9__mail_attachments.sql
crates/daemon/src/: main.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs  markdown_mirror.rs  selector.rs
crates/rules/: Cargo.toml
crates/rules/src/: lib.rs
crates/skills/: Cargo.toml
crates/skills/src/: lib.rs  loader.rs  manifest.rs  selector.rs
docs/: ARCHITECTURE.md  CONNECTORS.md  DATA_MODEL.md  MODEL_ROUTER.md  MVP_SPEC.md  PROMPT_DEBUG_LOGS.md  ROADMAP.md  RULES.md  SECURITY.md  UI_DESIGN.md
docs/spikes/: SUMMARY.md  apple_mail.md  apple_notes.md  notch_geometry.md  ollama.md  whatsapp.md  whisper.md
fixtures/sk/: README.md  faktura-upomienka.txt  mail_with_image_receipt.eml  mail_with_pdf_invoice.eml  memory_recall.yaml  staznost.txt  stretnutie.txt  style_corrections.yaml
ralph/: afk-codex.sh  once-codex.sh  prompt.md
skills/aerospace-window-control/: SKILL.md
skills/app-open-control/: SKILL.md
skills/codex-advanced-task/: SKILL.md
skills/file-open/: SKILL.md
skills/file-search/: SKILL.md
skills/invoice-analysis/: SKILL.md
skills/mail-search/: SKILL.md
skills/odoo-readonly/: SKILL.md
skills/screen-context/: SKILL.md
skills/sk-business-email/: SKILL.md
skills/whatsapp/: SKILL.md
(+527 files in other folders)
