[package]
name = "bagent-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
ollama-connector = { path = "../connectors/ollama" }
bagent-memory    = { path = "../memory" }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
tracing    = "0.1"
tokio      = { version = "1", features = ["full"] }
uuid       = { version = "1", features = ["v4"] }
chrono     = { version = "0.4", features = ["serde"] }

[dev-dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
