[package]
name = "bagentd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bagentd"
path = "src/main.rs"

[dependencies]
ollama-connector      = { path = "../connectors/ollama" }
apple-mail-connector  = { path = "../connectors/apple_mail" }
apple-notes-connector  = { path = "../connectors/apple_notes" }
filesystem-connector  = { path = "../connectors/filesystem" }
codex-connector       = { path = "../connectors/codex" }
odoo-connector        = { path = "../connectors/odoo" }
whatsapp-connector    = { path = "../connectors/whatsapp" }
bagent-agent          = { path = "../agent" }
bagent-memory         = { path = "../memory" }
bagent-rules          = { path = "../rules" }
bagent-skills         = { path = "../skills" }
bagent-attachments    = { path = "../attachments" }

tokio       = { version = "1", features = ["full"] }
axum        = { version = "0.7", features = ["macros", "multipart"] }
tower       = "0.4"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
rusqlite    = { version = "0.31", features = ["bundled"] }
refinery    = { version = "0.8", features = ["rusqlite"] }
reqwest     = { version = "0.12", features = ["json", "stream"] }
uuid        = { version = "1", features = ["v4"] }
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
tokio-stream = "0.1"
dirs        = "5"
chrono      = { version = "0.4", features = ["serde"] }
sha2        = "0.10"
base64      = "0.22"
notify      = { version = "6", features = ["macos_fsevent"] }
