[package]
name = "apple-mail-connector"
version = "0.1.0"
edition = "2021"

[lib]
name = "apple_mail_connector"

[dependencies]
rusqlite    = { version = "0.31", features = ["bundled"] }
mailparse   = "0.14"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
dirs        = "5"
whatlang    = "0.16"
tokio       = { version = "1", features = ["process"] }
base64      = "0.22"
mime_guess  = "2"
