[package]
name = "apple-notes-connector"
version = "0.1.0"
edition = "2021"

[lib]
name = "apple_notes_connector"

[dependencies]
rusqlite    = { version = "0.31", features = ["bundled"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
dirs        = "5"
whatlang    = "0.16"
tokio       = { version = "1", features = ["process"] }
