[package]
name = "codex-connector"
version = "0.1.0"
edition = "2021"

[lib]
name = "codex_connector"

[dependencies]
anyhow    = "1"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
sha2      = "0.10"
tokio     = { version = "1", features = ["process", "io-util", "time", "macros", "rt"] }
tracing   = "0.1"

[dev-dependencies]
tokio    = { version = "1", features = ["full"] }
tempfile = "3"
