[package]
name = "filesystem-connector"
version = "0.1.0"
edition = "2021"

[lib]
name = "filesystem_connector"

[dependencies]
anyhow      = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["process", "fs", "time", "macros", "rt"] }
ignore      = "0.4"
walkdir     = "2"
mime_guess  = "2"
sha2        = "0.10"
chrono      = { version = "0.4", features = ["serde"] }
dirs        = "5"
tracing     = "0.1"
bagent-attachments = { path = "../../attachments" }
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3"
