[package]
name = "odoo-connector"
version = "0.1.0"
edition = "2021"

[lib]
name = "odoo_connector"

[dependencies]
anyhow    = "1"
reqwest   = { version = "0.12", features = ["json"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
tokio     = { version = "1", features = ["rt"] }
tracing   = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
