[package]
name = "whatsapp-connector"
version = "0.1.0"
edition = "2021"

[lib]
name = "whatsapp_connector"

[dependencies]
anyhow    = "1"
reqwest   = { version = "0.12", features = ["json"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
tokio     = { version = "1", features = ["process", "io-util", "time", "macros", "rt", "sync"] }
tracing   = "0.1"
dirs      = "5"
libc      = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
